--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "mongodb": "^6.6.2",
+    "mongoose": "^9.0.0",
     "nodemon": "^3.1.1"
   }
 }
